Fix feels like temp label not centered on small devices

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -243,6 +243,7 @@ object {
 .extraTemp-feelsLike {
   margin-top: 0.5rem;
   font-size: clamp(1.4rem, 2.5vw, 2rem);
+  text-align: center;
 }
 
 .forecastPanel {
